diff-utils/src/snapshots/diff_utils__tests__test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g_.snap
---
source: diff-utils/src/lib.rs
expression: hunks
---
... ...   @@ -1,2 +1,2 @@
001      -A B C
002      -D E F
    001  +A B D
    002  +E F G


