diff-utils/src/snapshots/diff_utils__tests__test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g_n1_2_3_.snap
---
source: diff-utils/src/lib.rs
expression: hunks
---
... ...   @@ -1,2 +1,3 @@
001      -A B C
002      -D E F
    001  +A B D
    002  +E F G
    003  +1 2 3


