diff-utils/src/snapshots/diff_utils__tests__test_diff_hunks___r_24638_twin_room_p1_3_a1_3_c0_2_fc0_9_0_1_mca0_3_13_13_dz_child_ages_2_3_4_6_7_12_r_24638_twin_room_p1_3_a1_3_c0_2_fc0_9_0_3_mca0_3_13_13_dz_child_ages_4_6_7_12_.snap
---
source: diff-utils/src/lib.rs
expression: hunks
---
... ...   @@ -1,2 +1,2 @@
001      -|-------|-------------|-----------------------------------------|-----|---------------------------------|-----------|
002      -| 24638 | Twin Room   | P1:3 A1:3 C0:2 FC0:9[0:1] MCA0:3[13:13] | DZ  | child_ages:["2:3","4:6","7:12"] |           |
    001  +|-------|-------------|-----------------------------------------|-----|---------------------------|-----------|
    002  +| 24638 | Twin Room   | P1:3 A1:3 C0:2 FC0:9[0:3] MCA0:3[13:13] | DZ  | child_ages:["4:6","7:12"] |           |


